<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:id="@+id/resultDisplay"
                    android:padding="20dp"
                    android:gravity="bottom|right"
                    android:textSize="24dp"
                    android:text="0" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4">


                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num7"
                            android:id="@+id/button7"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num8"
                            android:id="@+id/button8"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num9"
                            android:id="@+id/button9"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/addition"
                            android:id="@+id/buttonAdd"
                            android:layout_row="0"
                            android:layout_column="3" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num4"
                            android:id="@+id/button4"
                            android:layout_row="1"
                            android:layout_column="0"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num5"
                            android:id="@+id/button5"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num6"
                            android:id="@+id/button6"
                            android:layout_row="1"
                            android:layout_column="2"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/subtraction"
                            android:id="@+id/buttonSubtract"
                            android:layout_row="1"
                            android:layout_column="3" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num1"
                            android:id="@+id/button1"
                            android:layout_row="2"
                            android:layout_column="0"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num2"
                            android:id="@+id/button2"
                            android:layout_row="2"
                            android:layout_column="1"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num3"
                            android:id="@+id/button3"
                            android:layout_row="2"
                            android:layout_column="2"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/multiplication"
                            android:id="@+id/buttonMultiply"
                            android:layout_row="2"
                            android:layout_column="3" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/decimal"
                            android:id="@+id/buttonDecimal"
                            android:layout_row="3"
                            android:layout_column="0"
                            android:nestedScrollingEnabled="false"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/num0"
                            android:id="@+id/button0"
                            android:layout_row="3"
                            android:layout_column="1"
                            android:onClick="onClickNumber" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/clear"
                            android:id="@+id/buttonClear"
                            android:layout_row="3"
                            android:layout_column="2"
                            android:nestedScrollingEnabled="true" />

                        <Button
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:text="@string/division"
                            android:id="@+id/buttonDivide"
                            android:layout_row="3"
                            android:layout_column="3" />

                </GridLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/equals"
                    android:id="@+id/buttonEquals"
                    android:textSize="32dp"
                    android:nestedScrollingEnabled="false" />

        </LinearLayout>

</RelativeLayout>



